cluster/apps/cloudflare-system/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cloudflare-system
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
    descheduler.kubernetes.io/exclude: "true"
